--------------------------------------------------------------------------------------------------
Release notes version 1.8.5_beta : Enhancements, modifications and corrected bugs since version 1.8.4 :
--------------------------------------------------------------------------------------------------
12/01/22 (TRUST)  Major Change: Class and Substitution Failure Is Not An Error (SFINAE) templates are extensively used for the VDF evaluators, iterators and operators
10/01/22 (TRUST)  Fix         : Champ_front_recyclage was not working properly if used in parallel calculations
06/01/22 (TRUST)  Fix         : PETSc Cholesky crashed on int64 builds with Intel compiler
06/01/22 (TRUST)  New keyword : Internal thermal boundary conditions. See validation sheets Echange_impose and echg_interne
06/01/22 (TRUST)  New keyword : ModifyDomaineAxi1D|Convert_1D_to_1Daxi to convert 1D mesh to 1D axisymmetric mesh
06/01/22 (TRUST)  New keyword : Champ_front_xyz_tabule to define a space-dependent boundary field which is also time tabulated. E.g: champ_front_xyz_tabule 1 x*y { t0 t1 t2 a1 a2 a3 }
06/01/22 (TRUST)  Change      : Stability time step for diffusion operator is now the same on PolyMAC conform mesh compared to VDF mesh
06/01/22 (TRUST)  New keyword : Sondes_fichier { fichier filename } to read probes definition into a file
--------------------------------------------------------------------------------------------------
Release notes version 1.8.4 : Enhancements, modifications and corrected bugs since version 1.8.3 :
--------------------------------------------------------------------------------------------------
23/11/21 (TRUST)  Fix         : Turbulent flow in a VDF stretched mesh was diverging with the implicited-diffusion solver 
23/11/21 (TRUST)  New feature : Add the possibility to read int64 binary files (.Zones, .sauv, .xyz) if possible (no overflow) with an int32 binary. The contrary was already true.