@@ -78,7 +78,7 @@
      "data": {
       "text/markdown": [
        "\n",
-       " Report generated 27/01/2022"
+       " Report generated 04/02/2022"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -105,7 +105,7 @@
       "text/markdown": [
        "### TRUST parameters \n",
        " * Version TRUST: 1.8.0\n",
-       " * Binary used: /volatile/catA/ll258196/trust-code/exec/TRUST_mpi_opt (built on TRUST /volatile/catA/ll258196/trust-code/Validation/Rapports_automatiques/jupyter/SampleForm/build)"
+       " * Binary used: /export/home/adrien/Projets/TRUST/TRUST_LOCAL/exec/TRUST_mpi_opt (built on TRUST /export/home/adrien/Projets/TRUST/TRUST_LOCAL/Validation/Rapports_automatiques/Verification/SampleFormJupyter/build)"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -234,6 +234,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "454228d3",
+   "metadata": {},
+   "source": [
+    "L'environnement MEDCoupling peut automatiquement être chargé avec:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ad90d59a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataArrayDouble C++ instance at 0x558b110249f0. Number of tuples : 3. Number of components : 1.\n",
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run.useMEDCoupling()\n",
+    "# Let's test it!\n",
+    "import medcoupling as mc\n",
+    "mc.DataArrayDouble([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3ec32c05",
    "metadata": {},
    "source": [
@@ -242,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "159204c6",
    "metadata": {},
    "outputs": [
@@ -395,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e3f30c59",
    "metadata": {
     "scrolled": true
@@ -406,7 +439,7 @@
      "output_type": "stream",
      "text": [
       "Running **with Sserver**...\n",
-      "  => A total of 3 cases were (successfully) run in 0.2s.\n"
+      "  => A total of 3 cases were (successfully) run in 0.4s.\n"
      ]
     }
    ],
@@ -423,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b9e80442",
    "metadata": {},
    "outputs": [],
@@ -443,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "favorite-sullivan",
    "metadata": {},
    "outputs": [
@@ -478,33 +511,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>./Loi_Fermeture_Test</th>\n",
-       "      <td>is244522</td>\n",
+       "      <td>is154527.intra.cea.fr</td>\n",
        "      <td>Linux</td>\n",
-       "      <td>0.005498</td>\n",
-       "      <td>0.000598</td>\n",
+       "      <td>0.007866</td>\n",
+       "      <td>0.003143</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>./grad_u_transpose_3d</th>\n",
-       "      <td>is244522</td>\n",
+       "      <td>is154527.intra.cea.fr</td>\n",
        "      <td>Linux</td>\n",
-       "      <td>0.015745</td>\n",
-       "      <td>0.0009544</td>\n",
+       "      <td>0.034837</td>\n",
+       "      <td>0.0021608</td>\n",
        "      <td>125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>./NouveauNom1</th>\n",
-       "      <td>is244522</td>\n",
+       "      <td>is154527.intra.cea.fr</td>\n",
        "      <td>Linux</td>\n",
-       "      <td>0.015619</td>\n",
-       "      <td>0.0009417</td>\n",
+       "      <td>0.044741</td>\n",
+       "      <td>0.0022529</td>\n",
        "      <td>125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>0.036862</td>\n",
+       "      <td>0.087444</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
@@ -513,20 +546,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                           host system  Total CPU Time CPU time/step  \\\n",
-       "./Loi_Fermeture_Test   is244522  Linux        0.005498      0.000598   \n",
-       "./grad_u_transpose_3d  is244522  Linux        0.015745     0.0009544   \n",
-       "./NouveauNom1          is244522  Linux        0.015619     0.0009417   \n",
-       "Total                                         0.036862                 \n",
+       "                                        host system  Total CPU Time  \\\n",
+       "./Loi_Fermeture_Test   is154527.intra.cea.fr  Linux        0.007866   \n",
+       "./grad_u_transpose_3d  is154527.intra.cea.fr  Linux        0.034837   \n",
+       "./NouveauNom1          is154527.intra.cea.fr  Linux        0.044741   \n",
+       "Total                                                      0.087444   \n",
        "\n",
-       "                      number of cells  \n",
-       "./Loi_Fermeture_Test                4  \n",
-       "./grad_u_transpose_3d             125  \n",
-       "./NouveauNom1                     125  \n",
-       "Total                                  "
+       "                      CPU time/step number of cells  \n",
+       "./Loi_Fermeture_Test       0.003143               4  \n",
+       "./grad_u_transpose_3d     0.0021608             125  \n",
+       "./NouveauNom1             0.0022529             125  \n",
+       "Total                                                "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "inside-slovakia",
    "metadata": {
     "scrolled": false,
@@ -619,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b9e5a54a",
    "metadata": {},
    "outputs": [
@@ -674,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "cubic-distributor",
    "metadata": {
     "scrolled": false
@@ -757,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "arbitrary-basket",
    "metadata": {
     "scrolled": false,
@@ -819,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "interstate-environment",
    "metadata": {
     "scrolled": false,
@@ -885,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "f02e1cf4",
    "metadata": {},
    "outputs": [
@@ -920,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "9baff76c",
    "metadata": {},
    "outputs": [
@@ -1024,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "cosmetic-vegetable",
    "metadata": {
     "scrolled": false,
@@ -1034,7 +1067,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f93d31edb1b482293a3d55349caa620",
+       "model_id": "0f69d88d4e9f4372a796de4176fb12ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1057,7 +1090,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
