@@ -56,7 +56,7 @@
      "data": {
       "text/markdown": [
        "### TRUST parameters \n",
-       " * Version TRUST: 1.8.4\n",
+       " * Version TRUST: 1.8.5_beta\n",
        " * Binary used: /export/home/adrien/Projets/TRUST/TRUST_LOCAL/exec/TRUST_mpi_opt (built on TRUST /export/home/adrien/Projets/TRUST/TRUST_LOCAL/Validation/Rapports_automatiques/Verification/Verification_codage/poiseuille/build)"
       ],
       "text/plain": [
@@ -83,13 +83,6 @@
     "scrolled": false
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XXXXX build\n"
-     ]
-    },
     {
      "data": {
       "text/markdown": [
@@ -147,13 +140,16 @@
      "output_type": "stream",
      "text": [
       "Running **with Sserver**...\n",
-      "  => A total of 40 cases were (successfully) run in 23.9s.\n"
+      "  => A total of 40 cases were (successfully) run in 23.7s.\n"
      ]
     }
    ],
    "source": [
     "from trustutils import run\n",
     "import os, sys\n",
+    "\n",
+    "# Load MEDCoupling environment\n",
+    "run.useMEDCoupling()\n",
     "\n",
     "# Trigger the copy of the src directory into the build directory:\n",
     "run.defaultSuite_ = run.TRUSTSuite(runPrepare=False)\n",
