@@ -1,5 +1,0 @@
-#!/bin/bash
-#export project_directory=$TRUST_ROOT/Validation/Rapports_automatiques/Verification/PolyMAC
-#source "$project_directory/share/maquette_decapoly/env_maquette.sh"
-#python prepare_python.py
-#for cas in */*/maillage_* ; do cp post_run ${cas}/. ; done
