@@ -57,7 +57,7 @@
      "data": {
       "text/markdown": [
        "### TRUST parameters \n",
-       " * Version TRUST: 1.8.4\n",
+       " * Version TRUST: 1.8.5_beta\n",
        " * Binary used: /export/home/adrien/Projets/TRUST/TRUST_LOCAL/exec/TRUST_mpi_opt (built on TRUST /export/home/adrien/Projets/TRUST/TRUST_LOCAL/Validation/Rapports_automatiques/Verification/Verification_codage/porosite_2D/build)"
       ],
       "text/plain": [
@@ -111,13 +111,16 @@
      "output_type": "stream",
      "text": [
       "Running **with Sserver**...\n",
-      "  => A total of 10 cases were (successfully) run in 31.8s.\n"
+      "  => A total of 10 cases were (successfully) run in 30.2s.\n"
      ]
     }
    ],
    "source": [
     "from trustutils import run\n",
     "import os, sys\n",
+    "\n",
+    "# We will need MEDCoupling - so load it in the Python path:\n",
+    "run.useMEDCoupling()\n",
     "\n",
     "# Trigger the copy of the src directory into the build directory:\n",
     "run.defaultSuite_ = run.TRUSTSuite(runPrepare=False)\n",
